--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Home</title>
+	<title>S&J</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/index.css">
 	<!--[if IE]>
@@ -11,86 +11,131 @@
 </head>
 
 <body>
- 
-	<h1>You got this!  Good luck.</h1>
-
-<!-- Menu Content 
-S&J
-
-Home
-Services
-Contact
--->
+<!-- Menu Content-->
 
 
-<!-- Home Page Content:
+<nav>
+	<h1><a href="index.html">S&J</a></h1> 
+	<img class='enter' src="img\nav-hamburger.png" alt="">
+</nav>
+<div class="drop closed">
+		<div class="dropsj"><h6>S&J</h6><img src="img\nav-hamburger-close.png" class='exit' alt="X"></div>
+			<div class="dropnav">	
+				<ul>
+					<a href="index.html"><li>Home</li></a>
+					<a href="services.html"><li>Services</li></a>
+					<a href="contact.html"><li>Contact</li></a>
+			</ul>
+		</div>
+	</div>
+<!-- Home Page Content--->
+<section class="billboard">
+	<h2>Integrity,
+		Excellence,
+		Progress.</h2>
+</section>
+
+<section class="boxes">
+<div class="box">
+	<h3>Smith & Jones Architects</h3>
+	<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
+	<p class='button'>Learn More</p>
+</div>
+
+<div class="img box" id='pen'>
 	
-Integrity,
-Excellence,
-Progress.
+</div>
 
-Smith & Jones Architects
+<div class="img box" id='pool'>
+	
+</div>
 
-Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem 
+<div class="box">
+	<h3>Futuristic Designs</h3>
+	<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
+	<p class='button'>View Designs</p>
+</div>
 
-Learn More
+<div class="recent">
+	<h3>Recent Projects</h3>
+	<div class="villas"></div>
+	<h4>THE VILLAS</h4>
+</div>
 
-Futuristic Designs
+<div class="blurb" id='blurb1'>
+		<p>The Villas bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.
+		</p> 
 
-Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem 
+		<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
+		</p>
+	</div>
 
-View Designs
+<div class="outskirts">
+<h4>OUTSKIRTS</h4>
+</div>
 
-Recent Projects
+<div class='blurb' id='blurb2'>
+	<p>The Outskirts are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
+	</p>
+	<p>	Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
+	</p>
+</div>
 
-THE VILLAS
+<div class="block">
+	<h4>THE BLOCKS</h4>
+</div>
 
-The Villas bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
+<div class="blurb">
+	<p>The Blocks are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
+	</p>
+	<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
+	</p>
+</div>
 
-Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
+</section>
 
-OUTSKIRTS
+<section class="footer">
+	<div class="form">
+			<h5>Interested in starting a project?  
+				Let’s talk:
+			</h5>
+			<form action="">
+				<input type="text" placeholder="Enter email">
+			</form>
+			<p>We'll never share your email with anyone else.</p>
+	</div>
 
-The Outskirts are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
+	<div class="newyork">
+		<h5>New York</h5>
+		<p>123 Lane
+				Suite 100
+				Albany, NY 12345
+				202 555 0144
+			</p>
+	</div>
 
-Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
+	<div class="newyork">
+			<h5>Florida</h5>
+			<p>Ocean Drive
+					Suite 201
+					Orlando, FL 22345
+					502 555 0144
+				</p>
+		</div>
 
-THE BLOCKS
+		<div class="newyork">
+				<h5>California</h5>
+				<p>Mountain Street
+						Suite 105
+						San Diego, CA 22345
+						702 555 0144
+					</p>
+			</div>
+	<p>Copyright © 2018 Smith and Jones</p>
+</section>
 
-The Blocks are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
 
-Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
 
--->
-
-<!-- FOOTER CONTENT
-Interested in starting a project?  
-Let’s talk:
-
-Enter email
-
-We'll never share your email with anyone else.
-
-New York
-123 Lane
-Suite 100
-Albany, NY 12345
-202 555 0144
-
-Florida
-Ocean Drive
-Suite 201
-Orlando, FL 22345
-502 555 0144
-
-California
-Mountain Street
-Suite 105
-San Diego, CA 22345
-702 555 0144
-
-Copyright © 2018 Smith and Jones
--->
 	<script src="js/index.js"></script>
 </body>
 </html>
