--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,14 @@
 </head>
 
 <body>
+		<nav>
+				<h1>S&J</h1>
+			
+				<div id='hamburger'>---</div>
+			</nav>
 
-	<h1>Contact</h1>
+
+
 
 <!-- Contactd Us Content 
   Contact Us
@@ -55,6 +61,45 @@ San Diego, CA 22345
 702 555 0144
 
 -->
+<section class="footer">
+		<div class="form">
+				<h5>Interested in starting a project?  
+					Let’s talk:
+				</h5>
+				<form action="">
+					<input type="text" placeholder="Enter email">
+				</form>
+				<p>We'll never share your email with anyone else.</p>
+		</div>
+	
+		<div class="newyork">
+			<h5>New York</h5>
+			<p>123 Lane
+					Suite 100
+					Albany, NY 12345
+					202 555 0144
+				</p>
+		</div>
+	
+		<div class="newyork">
+				<h5>Florida</h5>
+				<p>Ocean Drive
+						Suite 201
+						Orlando, FL 22345
+						502 555 0144
+					</p>
+			</div>
+	
+			<div class="newyork">
+					<h5>California</h5>
+					<p>Mountain Street
+							Suite 105
+							San Diego, CA 22345
+							702 555 0144
+						</p>
+				</div>
+		<p>Copyright © 2018 Smith and Jones</p>
+	</section>
 
 	<script src="js/index.js"></script>
 </body>
