--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>S&J</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-	<link rel="stylesheet" href="css/index.css">
-	<!--[if IE]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
+<meta charset="utf-8">
+<title>S&J</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+<link rel="stylesheet" href="css/index.css">
+<!--[if IE]>
+	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 </head>
 
 <body>
@@ -15,127 +16,153 @@
 
 
 <nav>
-	<h1><a href="index.html">S&J</a></h1> 
-	<img class='enter' src="img\nav-hamburger.png" alt="">
+<h1><a href="index.html">S&J</a></h1> 
+<img class='enter' src="img\nav-hamburger.png" alt="">
 </nav>
 <div class="drop closed">
-		<div class="dropsj"><h6>S&J</h6><img src="img\nav-hamburger-close.png" class='exit' alt="X"></div>
-			<div class="dropnav">	
-				<ul>
-					<a href="index.html"><li>Home</li></a>
-					<a href="services.html"><li>Services</li></a>
-					<a href="contact.html"><li>Contact</li></a>
-			</ul>
-		</div>
+	<div class="dropsj"><h6>S&J</h6><img src="img\nav-hamburger-close.png" class='exit' alt="X"></div>
+		<div class="dropnav">	
+			<ul>
+				<a href="index.html"><li>Home</li></a>
+				<a href="services.html"><li>Services</li></a>
+				<a href="contact.html"><li>Contact</li></a>
+		</ul>
 	</div>
+</div>
 <!-- Home Page Content--->
 <section class="billboard">
-	<h2>Integrity,
-		Excellence,
-		Progress.</h2>
+<!-- <img src="img\home\home-jumbotron.png" alt=""> -->
+<div class="big fadein"> <ul>
+	<li>Integrity,</li>
+	<li>Excellence,</li>
+	<li>Progress.</li>
+</ul>
+</div>
 </section>
 
 <section class="boxes">
+		<div class="row1">
 <div class="box">
-	<h3>Smith & Jones Architects</h3>
-	<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
-	<p class='button'>Learn More</p>
-</div>
-
-<div class="img box" id='pen'>
 	
+<h3>Smith & Jones Architects</h3>
+<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
+<p class='button'>Learn More</p>
 </div>
 
+	<div class="img box" id='pen'>
+		<img src="img\home\home-img-1.png" alt="pen">
+	</div>
+</div>
+
+<div class="row2">
 <div class="img box" id='pool'>
-	
+<img src="img\home\home-img-2.png" alt="">
 </div>
 
 <div class="box">
-	<h3>Futuristic Designs</h3>
-	<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
-	<p class='button'>View Designs</p>
+<h3>Futuristic Designs</h3>
+<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
+<p class='button'>View Designs</p>
+</div>
+
 </div>
 
 <div class="recent">
-	<h3>Recent Projects</h3>
-	<div class="villas"></div>
-	<h4>THE VILLAS</h4>
+<h3>Recent Projects</h3>
+
+
+<div class="villas">
+	<img src="img\home\home-villas-img.png" alt="">
+	<div class="villa"><h4>THE VILLAS</h4></div>
 </div>
 
 <div class="blurb" id='blurb1'>
-		<p>The Villas bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.
-		</p> 
+	<p>The Villas bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.
+	</p> 
 
-		<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-		</p>
-	</div>
-
-<div class="outskirts">
-<h4>OUTSKIRTS</h4>
-</div>
-
-<div class='blurb' id='blurb2'>
-	<p>The Outskirts are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
-	</p>
-	<p>	Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-	</p>
-</div>
-
-<div class="block">
-	<h4>THE BLOCKS</h4>
-</div>
-
-<div class="blurb">
-	<p>The Blocks are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
-	</p>
 	<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
 	</p>
 </div>
 
+<div class="outskirts">
+	<img src="img\home\home-outskirts-img.png" alt="">
+<div class="outskirt"><h4>OUTSKIRTS</h4></div>
+</div>
+
+<div class='blurb' id='blurb2'>
+<p>The Outskirts are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
+</p>
+<p>	Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
+</p>
+</div>
+
+<div class="blocks">
+	<img src="img\home\home-the-blocks-img.png" alt="">
+<div class="block"><h4>THE BLOCKS</h4></div> 
+</div>
+
+<div class="blurb">
+<p>The Blocks are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. 
+</p>
+<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
+</p>
+</div>
+
 </section>
 
-<section class="footer">
-	<div class="form">
-			<h5>Interested in starting a project?  
-				Let’s talk:
-			</h5>
-			<form action="">
-				<input type="text" placeholder="Enter email">
-			</form>
-			<p>We'll never share your email with anyone else.</p>
-	</div>
+<footer>
+<div class="container">
+<div class="form">
+		<h5>Interested in starting a project? <br> 
+			Let’s talk:
+		</h5>
+		<form action="">
+			<input type="text" placeholder="Enter email">
+		</form>
+		<p>We'll never share your email with anyone else.</p>
+</div>
 
-	<div class="newyork">
-		<h5>New York</h5>
-		<p>123 Lane
-				Suite 100
-				Albany, NY 12345
-				202 555 0144
+<div class="newyork smallbox">
+	<h5>New York</h5>
+	<p>123 Lane
+		</br>
+			Suite 100
+		</br>
+			Albany, NY 12345
+		</br>
+			202 555 0144
+		</p>
+</div>
+
+<div class="newyork smallbox">
+		<h5>Florida</h5>
+		<p>Ocean Drive
+			</br>
+				Suite 201
+			</br>
+				Orlando, FL 22345
+			</br>
+				502 555 0144
 			</p>
 	</div>
 
-	<div class="newyork">
-			<h5>Florida</h5>
-			<p>Ocean Drive
-					Suite 201
-					Orlando, FL 22345
-					502 555 0144
+	<div class="newyork smallbox">
+			<h5>California</h5>
+			<p>Mountain Street
+				<br>
+					Suite 105
+					<br>
+					San Diego, CA 22345
+			</br>
+					702 555 0144
 				</p>
 		</div>
-
-		<div class="newyork">
-				<h5>California</h5>
-				<p>Mountain Street
-						Suite 105
-						San Diego, CA 22345
-						702 555 0144
-					</p>
-			</div>
-	<p>Copyright © 2018 Smith and Jones</p>
-</section>
+	</div>
+<p>Copyright © 2018 Smith and Jones</p>
+</footer>
 
 
 
-	<script src="js/index.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
