--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
 <!-- Home Page Content--->
 <section class="billboard">
 <!-- <img src="img\home\home-jumbotron.png" alt=""> -->
-<div class="big fadein"> <ul>
-	<li>Integrity,</li>
-	<li>Excellence,</li>
-	<li>Progress.</li>
-</ul>
-</div>
-</section>
 
+</section>
+<div class="big fadein">
+		<ul>
+	 <li>Integrity,</li>
+	 <li>Excellence,</li>
+	 <li>Progress.</li>
+ </ul>
+ </div>
 <section class="boxes">
 		<div class="row1">
 <div class="box">
