--- a/index.html
+++ b/index.html
@@ -30,17 +30,20 @@
 	</div>
 </div>
 <!-- Home Page Content--->
-<section class="billboard">
+<section class="billboard" id= "billboard">
 <!-- <img src="img\home\home-jumbotron.png" alt=""> -->
 
 </section>
-<div class="big fadein">
-		<ul>
-	 <li>Integrity,</li>
-	 <li>Excellence,</li>
-	 <li>Progress.</li>
- </ul>
+<div class="big fadein" >
+<p>
+	Integrity,
+	<br>
+	Excellence,
+	<br>
+	Progress.
+</p>
  </div>
+
 <section class="boxes">
 		<div class="row1">
 <div class="box">
@@ -73,7 +76,8 @@
 
 
 <div class="villas">
-	<img src="img\home\home-villas-img.png" alt="">
+	<img class='large' src="img\home\home-villas-img.png" alt="">
+	<img class='small' src="img\home\home-mobile-villas-img.png" alt="">
 	<div class="villa"><h4>THE VILLAS</h4></div>
 </div>
 
@@ -86,7 +90,8 @@
 </div>
 
 <div class="outskirts">
-	<img src="img\home\home-outskirts-img.png" alt="">
+	<img class='large' src="img\home\home-outskirts-img.png" alt="">
+	<img class='small' src="img\home\home-mobile-outskirts-img.png" alt="">
 <div class="outskirt"><h4>OUTSKIRTS</h4></div>
 </div>
 
@@ -98,7 +103,8 @@
 </div>
 
 <div class="blocks">
-	<img src="img\home\home-the-blocks-img.png" alt="">
+	<img class='large' id='large' src="img\home\home-the-blocks-img.png" alt="">
+	<img class='small' src="img\home\home-mobile-the-blocks-img.png" alt="">
 <div class="block"><h4>THE BLOCKS</h4></div> 
 </div>
 
