about us stretch

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Contact Us</title>
+	<title>About Us</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/index.css">
 	<!--[if IE]>
@@ -26,80 +26,30 @@
 			</div>
 		</div>
 
-		
-
-
-
 
 		<section class="contactboard">
 			<img src="img/contact/contactbanner.png" alt="">
 				<div class="big fadein"> 
-					<h6>Contact Us</h6> 
+					<h6>About Us</h6> 
 				</div>
-		
 		</section>			
 
-	<section class="contact">
+	<section class="about">
 
-			<div class="form">
-					<h3> Get in Touch</h3>
-				<form action="">
-			<p>Name</p> <input type="text" placeholder="Your Name">
-			<p>Email</p> <input type="text" placeholder="Enter email">
-			<p>How many buildings do you need planned? </p> <input type="text" placeholder="1-5">
-			<p>Provide a breif overview of your project needs.</p>
-			<textarea id="" cols="30" rows="10" placeholder="ex. I'm a small business owner..."></textarea>
-			<button>submit</button>
-		</form>
-		</div>
-
-
-
-<section class="locations">
-
-<div class="spot newyork">
-	<img src="img/contact/california.jpeg" alt="">
-	<div class="address">
-	<h4>New York</h4>
-			<p>123 Lane
-			</br>
-			Suite 100
-			</br>
-			Albany, NY 12345
-			</br>
-			202 555 0144
-			</p>
-	</div>
+<div class="company">
+<div class="aboutcomp">
+<h2>Our Company</h2>
+<p>Baseline the procedure and samepage your department old boys club, but push back. Pushback quantity. Obviously shelfware, thinking outside the box, but we don't want to boil the ocean so high touch client so run it up the flag pole low-hanging fruit. Please use "solutionise" instead of solution ideas! :) we've got to manage that low hanging fruit. Action item can we take this offline, yet digital literacy. Net net re-inventing the wheel, and low-hanging fruit, and this is not the hill i want to die on I just wanted to give you a heads-up.</p>
+<h2>Our Company</h2>
+<p>Baseline the procedure and samepage your department old boys club, but push back. Pushback quantity. Obviously shelfware, thinking outside the box, but we don't want to boil the ocean so high touch client so run it up the flag pole low-hanging fruit. Please use "solutionise" instead of solution ideas! :) we've got to manage that low hanging fruit. Action item can we take this offline, yet digital literacy. Net net re-inventing the wheel, and low-hanging fruit, and this is not the hill i want to die on I just wanted to give you a heads-up.</p>
 </div>
-<div class="spot cali">
-	<img src="img/contact/florida.jpeg" alt="">
-	<div class="address">
-	<h4>California</h4>
-	<p>Mountain Street
-		<br>
-			Suite 105
-			<br>
-			San Diego, CA 22345
-	</br>
-			702 555 0144
-		</p>
-	</div>
+<div class="picture">
+<img src="img\about\building.jpeg" alt="">
 </div>
+</div>		
 
-<div class="spot florida">
-	<img src="img/contact/albany.jpeg" alt="">
-		<div class="address">
-			<h4>Florida</h4>
-			<p>Ocean Drive
-			</br>
-			Suite 201
-			</br>
-			Orlando, FL 22345
-			</br>
-			502 555 0144
-			</p>
-		</div>		
-</div>
+
+
 
 
 </section>
