about us stretch almost done

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 	<title>About Us</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
@@ -22,13 +23,14 @@
 						<a href="index.html"><li>Home</li></a>
 						<a href="services.html"><li>Services</li></a>
 						<a href="contact.html"><li>Contact</li></a>
+						<a href="about.html"><li>About Us</li></a>
 				</ul>
 			</div>
 		</div>
 
 
 		<section class="contactboard">
-			<img src="img/contact/contactbanner.png" alt="">
+			<img src="img\about\aboutbanner.PNG" alt="">
 				<div class="big fadein"> 
 					<h6>About Us</h6> 
 				</div>
@@ -39,18 +41,173 @@
 <div class="company">
 <div class="aboutcomp">
 <h2>Our Company</h2>
-<p>Baseline the procedure and samepage your department old boys club, but push back. Pushback quantity. Obviously shelfware, thinking outside the box, but we don't want to boil the ocean so high touch client so run it up the flag pole low-hanging fruit. Please use "solutionise" instead of solution ideas! :) we've got to manage that low hanging fruit. Action item can we take this offline, yet digital literacy. Net net re-inventing the wheel, and low-hanging fruit, and this is not the hill i want to die on I just wanted to give you a heads-up.</p>
-<h2>Our Company</h2>
-<p>Baseline the procedure and samepage your department old boys club, but push back. Pushback quantity. Obviously shelfware, thinking outside the box, but we don't want to boil the ocean so high touch client so run it up the flag pole low-hanging fruit. Please use "solutionise" instead of solution ideas! :) we've got to manage that low hanging fruit. Action item can we take this offline, yet digital literacy. Net net re-inventing the wheel, and low-hanging fruit, and this is not the hill i want to die on I just wanted to give you a heads-up.</p>
+<p>Baseline the procedure and samepage your department old boys club, but push back. Pushback quantity. Obviously shelfware, so high touch client so run it up the flag pole low-hanging fruit.</p>
+<h2>Our Mission</h2>
+<p>Baseline the procedure and samepage your department old boys club, but push back. We've got to manage that low hanging fruit. Action item can we take this offline, yet digital literacy. Net net re-inventing the wheel, and low-hanging fruit, and this is not the hill i want to die on I just wanted to give you a heads-up.</p>
 </div>
 <div class="picture">
-<img src="img\about\building.jpeg" alt="">
+<img src="img/about/buildingsmall.jpg" alt="">
 </div>
 </div>		
+<h3>Our Team</h3>
+<div class="team">
+	
+<div class="member team1">
+	<h5>Jane Doe</h5>
+		<p>CEO</p>
+
+		<div class="links">
+				<p>Profile</p>
+				<p>LinkedIn</p>
+			</div>
+
+		<div class="media">
+		<i class="fab fa-twitter"></i> <i class="fab fa-facebook-f"></i><i class="fab fa-github"></i>
+		</div>
+
+		<div class="image img1 .appear"> <img class="fadein  "  src="img\about\about7.PNG" alt="">
+		</div>
+</div>
 
 
+<div class="member" id="team2">
+		<h5>Jane Doe</h5>
+			<p>Media Coordinator</p>
+	
+			<div class="links">
+					<p>Profile</p>
+					<p>LinkedIn</p>
+				</div>
+	
+			<div class="media">
+			<i class="fab fa-twitter"></i> <i class="fab fa-facebook-f"></i><i class="fab fa-github"></i>
+			</div>
+	
+			<div class="image"> <img class="fadein" id="img2" src="img\about\about2.PNG" alt="">
+			</div>
+	</div>
 
 
+<div class="member" id="team3">
+		<h5>Jane Doe</h5>
+			<p>Executive <br> Office Manager</p>
+		
+			<div class="links">
+					<p>Profile</p>
+					<p>LinkedIn</p>
+				</div>
+		
+			<div class="media">
+			<i class="fab fa-twitter"></i> <i class="fab fa-facebook-f"></i><i class="fab fa-github"></i>
+			</div>
+		
+			<div class="image"> <img class="fadein" id="img3" src="img\about\about3.PNG" alt="">
+			</div>
+</div>
+
+<div class="member" id="team4">
+	<h5>Jane Doe</h5>
+		<p>Sr. Architectural <br>Associate</p>
+	
+		<div class="links">
+		<p>Profile</p>
+		<p>LinkedIn</p>
+	</div>
+	
+	<div class="media">
+		<i class="fab fa-twitter"></i> <i class="fab fa-facebook-f"></i><i class="fab fa-github"></i>
+		</div>
+	
+		<div class="image" id="img4" > <img class="fadein" src="img\about\about4.PNG" alt="">
+		</div>
+</div>
+
+<div class="member" id="team5">
+		<h5>Jane Doe</h5>
+			<p>Dir. of <br> Interior Design</p>
+	
+			<div class="links">
+					<p>Profile</p>
+					<p>LinkedIn</p>
+				</div>
+	
+			<div class="media">
+			<i class="fab fa-twitter"></i> <i class="fab fa-facebook-f"></i><i class="fab fa-github"></i>
+			</div>
+	
+			<div class="image"> <img class="fadein" id="img5" src="img\about\about5.PNG" alt="">
+			</div>
+	</div>
+
+<div class="member" id="team6">
+		<h5>Jane Doe</h5>
+			<p>Architectural Assoc.</p>
+		
+			<div class="links">
+					<p>Profile</p>
+					<p>LinkedIn</p>
+				</div>
+		
+			<div class="media">
+				<i class="fab fa-twitter"></i> <i class="fab fa-facebook-f"></i><i class="fab fa-github"></i>
+			</div>
+		
+			<div class="image"> <img class="fadein" id="img6" src="img\about\about6.PNG" alt="">
+	</div>
+</div>
+
+<div class="member" id="team7">
+		<h5>Jane Doe</h5>
+			<p>Architectural Assoc. </p>
+		
+			<div class="links">
+					<p>Profile</p>
+					<p>LinkedIn</p>
+				</div>
+		
+			<div class="media">
+				<i class="fab fa-twitter"></i> <i class="fab fa-facebook-f"></i><i class="fab fa-github"></i>
+			</div>
+		
+			<div class="image"> <img class="fadein" id="img7"src="img\about\about8.PNG" alt="">
+	</div>
+</div>
+
+<div class="member" id="team8">
+		<h5>Jane Doe</h5>
+			<p>Architect</p>
+		
+			<div class="links">
+					<p>Profile</p>
+					<p>LinkedIn</p>
+				</div>
+		
+			<div class="media">
+				<i class="fab fa-twitter"></i> <i class="fab fa-facebook-f"></i><i class="fab fa-github"></i>
+			</div>
+		
+			<div class="image"> <img class="fadein" id="img8"src="img\about\about9.PNG" alt="">
+	</div>
+</div>
+
+<div class="member" id="team9">
+		<h5>Jane Doe</h5>
+			<p>Architect</p>
+		
+			<div class="links">
+					<p>Profile</p>
+					<p>LinkedIn</p>
+				</div>
+		
+			<div class="media">
+				<i class="fab fa-twitter"></i> <i class="fab fa-facebook-f"></i><i class="fab fa-github"></i>
+			</div>
+		
+			<div class="image"> <img class="fadein" id="img9"src="img\about\about1.PNG" alt="">
+	</div>
+</div>
+<!-- end team -->
+</div>
 
 </section>
 
