--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				<a href="index.html"><li>Home</li></a>
 				<a href="services.html"><li>Services</li></a>
 				<a href="contact.html"><li>Contact</li></a>
+				<a href="about.html"><li>About Us</li></a>
 		</ul>
 	</div>
 </div>
